syntax = "proto3";

package manager;

option go_package = "./v1;v1";

import "validate/validate.proto";

message Menu {
  uint32 id = 1;
  uint32 parent_id = 2;
  string title = 3;
  string type = 4;
  string icon = 5;
  string path = 6;
  string keyword = 7;
  string permission = 8;
  string component = 9;
  string api = 10;
  string method = 11;
  optional string redirect = 12;
  optional int32 weight = 13;
  optional bool is_hidden = 14;
  optional bool is_cache = 15;
  optional bool is_home = 16;
  optional bool is_affix = 17;
  string app = 18;
  repeated Menu children = 19;
  uint32 created_at = 20;
  uint32 updated_at = 21;
}

message GetMenuTreeReply{
  repeated Menu list = 1;
}


message AddMenuRequest{
  uint32 parent_id = 1;
  string app = 2[(validate.rules).string = {min_len:1}];
  string title = 3[(validate.rules).string = {min_len:1}];
  string type = 4[(validate.rules).string = {in:["R","A","M","G","BA"]}];
  optional string icon = 5;
  optional string path = 6;
  optional string keyword = 7;
  optional string permission = 8;
  optional string component = 9;
  optional string api = 10;
  optional string method = 11;
  optional string redirect = 12;
  optional int32 weight = 13;
  optional bool is_hidden = 14;
  optional bool is_cache = 15;
  optional bool is_home = 16;
  optional bool is_affix = 17;
}

message UpdateMenuRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
  uint32 parent_id = 2;
  string title = 3[(validate.rules).string = {min_len:1}];
  string type = 4[(validate.rules).string = {in:["R","A","M","G","BA"]}];
  optional string icon = 5;
  optional string path = 6;
  optional string keyword = 7;
  optional string permission = 8;
  optional string component = 9;
  optional string api = 10;
  optional string method = 11;
  optional string redirect = 12;
  optional int32 weight = 13;
  optional bool is_hidden = 14;
  optional bool is_cache = 15;
  optional bool is_home = 16;
  optional bool is_affix = 17;
}

message DeleteMenuRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
}
